# xcp-lite

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  no_a2l_demo.c  no_a2l_demo.out  xcp_lite.a2l
.cargo/: config.toml
doc/: SUBMODULE_GUIDE.md
examples/all_features_demo/src/: main.rs
examples/calibration_demo/: Cargo.toml  README.md
examples/calibration_demo/src/: main.rs
examples/hello_xcp/: Cargo.toml  README.md
examples/hello_xcp/src/: main.rs
examples/multi_thread_demo/: Cargo.toml
examples/multi_thread_demo/src/: main.rs
examples/point_cloud_demo/: Cargo.toml
examples/point_cloud_demo/src/: main.rs
examples/rayon_demo/: Cargo.toml
examples/rayon_demo/src/: main.rs
examples/single_thread_demo/: Cargo.toml
examples/single_thread_demo/src/: main.rs
examples/struct_measurement_demo/: Cargo.toml  README.md
examples/struct_measurement_demo/src/: main.rs
examples/tokio_demo/: Cargo.toml
examples/tokio_demo/src/: main.rs
src/: lib.rs  main.rs
src/metrics/: counter.rs  histogram.rs
src/registry/: mc_address.rs  mc_calseg.rs  mc_event.rs  mc_instance.rs  mc_registry.rs  mc_text.rs  mc_type.rs  mod.rs
src/registry/a2l/: a2l_reader.rs  a2l_writer.rs  mod.rs
src/xcp/: c_cal.rs  cal.rs  daq.rs  mod.rs  xcplib.rs
src/xcp/daq/: daq_event.rs
tests/: test_multi_thread.rs  test_single_thread.rs  xcp_test_executor.rs
tests/support/: xcp_test_executor.rs
tests/support/xcp_test_client/src/xcp_client/: mod.rs
tools/: compare_hex.py
tools/xcp_client/: Cargo.toml  README.md
tools/xcp_client/src/: lib.rs  main.rs  xcp_client.rs  xcp_test_executor.rs
tools/xcp_client/src/bin_reader/: bin_format.rs  mod.rs
tools/xcp_client/src/debuginfo/: iter.rs  mod.rs
tools/xcp_client/src/debuginfo/dwarf/: attributes.rs  mod.rs  typereader.rs
tools/xcp_client/src/elf_reader/: mod.rs
tools/xcp_client/src/elf_reader/debuginfo/: cfa.rs  mod.rs
tools/xcp_client/src/elf_reader/debuginfo/dwarf/: attributes.rs  mod.rs  typereader.rs
tools/xcp_client/src/hex_reader/: mod.rs
tools/xcp_client/src/xcp_client/: mod.rs  xcp.rs
xcp_client/src/: main.rs  xcp_client.rs
xcp_idl_generator/: Cargo.toml
xcp_idl_generator/xcp_idl_generator_derive/: Cargo.toml
xcp_register_type_derive/src/: attr.rs  lib.rs
xcp_registry/src/: lib.rs  mc_calseg.rs  mc_event.rs  mc_instance.rs  mc_registry.rs  mc_support.rs  mc_text.rs  mc_typedef.rs
xcp_registry/src/a2l/: a2l_writer.rs  aml_ifdata.rs  mod.rs
xcp_type_description/: Cargo.toml
xcp_type_description/src/: lib.rs
xcp_type_description/xcp_type_description_derive/: Cargo.toml
xcp_type_description/xcp_type_description_derive/src/: utils.rs
xcplib_cfg/: xcplib_cfg.h  xcplib_rust_cfg.h
