[package]
name = "hello_xcp"
version = "0.9.2"
edition = "2024"



[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
anyhow = "1.0"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
clap = { version = "4.5.9", features = ["derive"] }
build-info = "0.0.40"

xcp_lite = { path = "../../", features = [] }

[build-dependencies]
build-info-build = "0.0.40"

[features]
default = [] 
