[package]
name = "multi_thread_demo"
version = "0.9.3"
edition = "2024"

[dependencies]
anyhow = "1.0"
log = "0.4.21"
env_logger = "0.11.3"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
clap = { version = "4.5.9", features = ["derive"] }
build-info = "0.0.40"

xcp_lite = { path = "../../", features = [] }

[build-dependencies]
build-info-build = "0.0.40"
