[package]
name = "point_cloud_demo"
version = "0.9.3"
edition = "2024"

[dependencies]
anyhow = "1.0"
log = "0.4.21"
env_logger = "0.11.3"
rayon = "1.10.0"
num = "0.4.3"
image = "0.25.2"

serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
cdr = "0.2.4"
clap = { version = "4.5.9", features = ["derive"] }
build-info = "0.0.40"

xcp_lite = { path = "../../", features = [] }

[build-dependencies]
build-info-build = "0.0.40"

