[package]
name = "xcp_client"
version = "0.9.3"
edition = "2024"
resolver = "2"
authors = ["RainerZ"]
description = "Rust wrapper for XCPlite an implementation of ASAM XCP in C"
readme = "README.md"
keywords = ["XCP","ASAM","CANape","A2L"]
license = "MIT"
homepage = "https://vector.com"  
repository = "https://github.com/vectorgrp/xcp-lite"
categories = ["measurement and calibration"] 

 # more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
clap = { version = "4.5.9", features = ["derive"] }
anyhow = "1.0"
lazy_static = "1.4"
byteorder = "1.5.0"
bytes = "1.6.0"
ihex = "3.0.0"
regex = "1.11.1"
chrono = "0.4.42"
parking_lot = "0.12.3"
tokio = { version = "1.37.0", features = ["full"] }

# Debug info parsing dependencies
gimli = "0.28"
object = "0.36"
pdb2 = "0.10"
memmap2 = "0.9"
indexmap = "2.2"
cpp_demangle = "0.4"

# A2l registry and A2L reader/writer
a2lfile = { version="3.0.0" }
xcp_lite = { path = "../../", features = ["a2l_reader"] }

[lints.rust]
dead_code = "allow"
unused_variables = "allow"

[build-dependencies]





